# stockdb

./: compose.yml
api-server/: Dockerfile  pyproject.toml
api-server/app/: main.py
api-server/data/: krx_listed_issues_20240725.csv
api-server/scripts/: register_sumbols.py  register_symbols.py  update_quotes.py
db/: Dockerfile
db/init/: 0_config.sh  2_create_table.sql
