[tool.poetry]
name = "stockdb"
version = "0.1.0"
description = ""
authors = ["PSJ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
polars = "^1.2.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
